--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ notifications:      #通知
 
 install:                             #install阶段 安装依赖
   # - npm install -g gitbook-cli       #安装gitbook 
-  # - gitbook install                  #安装插件
+  - gitbook install                  #安装插件
   # - npm install -g gitbook-summary   #使自动生成SUMMARY.md的一个工具
 
 script:                              #script阶段 运行脚本
